tests/NormalTests/paczka1/fuzzy1/89693823.err
Error in line 12: 661Y A202 82,0
Error in line 19: 661Y S940 19,3
Error in line 26: hY0RwQ A202 4,1
Error in line 15: BqwwqlmxK S940 47,7
Error in line 25: 661Y A438 85,1
Error in line 32: RyhBcQmz832 S733 89,5
